@@ -39,361 +39,333 @@ import java.util.StringTokenizer;
  */
 public class BasicSqlFormatter {
 
-	public static final String WHITESPACE = " \n\r\f\t";
-	
-	private static final Set BEGIN_CLAUSES = new HashSet();
-	private static final Set END_CLAUSES = new HashSet();
-	private static final Set LOGICAL = new HashSet();
-	private static final Set QUANTIFIERS = new HashSet();
-	private static final Set DML = new HashSet();
-	private static final Set MISC = new HashSet();
+    public static final String WHITESPACE = " \n\r\f\t";
 
-	static {
-		BEGIN_CLAUSES.add( "left" );
-		BEGIN_CLAUSES.add( "right" );
-		BEGIN_CLAUSES.add( "inner" );
-		BEGIN_CLAUSES.add( "outer" );
-		BEGIN_CLAUSES.add( "group" );
-		BEGIN_CLAUSES.add( "order" );
+    private static final Set BEGIN_CLAUSES = new HashSet();
+    private static final Set END_CLAUSES = new HashSet();
+    private static final Set LOGICAL = new HashSet();
+    private static final Set QUANTIFIERS = new HashSet();
+    private static final Set DML = new HashSet();
+    private static final Set MISC = new HashSet();
 
-		END_CLAUSES.add( "where" );
-		END_CLAUSES.add( "set" );
-		END_CLAUSES.add( "having" );
-		END_CLAUSES.add( "join" );
-		END_CLAUSES.add( "from" );
-		END_CLAUSES.add( "by" );
-		END_CLAUSES.add( "join" );
-		END_CLAUSES.add( "into" );
-		END_CLAUSES.add( "union" );
+    static {
+        BEGIN_CLAUSES.add("left");
+        BEGIN_CLAUSES.add("right");
+        BEGIN_CLAUSES.add("inner");
+        BEGIN_CLAUSES.add("outer");
+        BEGIN_CLAUSES.add("group");
+        BEGIN_CLAUSES.add("order");
 
-		LOGICAL.add( "and" );
-		LOGICAL.add( "or" );
-		LOGICAL.add( "when" );
-		LOGICAL.add( "else" );
-		LOGICAL.add( "end" );
+        END_CLAUSES.add("where");
+        END_CLAUSES.add("set");
+        END_CLAUSES.add("having");
+        END_CLAUSES.add("join");
+        END_CLAUSES.add("from");
+        END_CLAUSES.add("by");
+        END_CLAUSES.add("join");
+        END_CLAUSES.add("into");
+        END_CLAUSES.add("union");
 
-		QUANTIFIERS.add( "in" );
-		QUANTIFIERS.add( "all" );
-		QUANTIFIERS.add( "exists" );
-		QUANTIFIERS.add( "some" );
-		QUANTIFIERS.add( "any" );
+        LOGICAL.add("and");
+        LOGICAL.add("or");
+        LOGICAL.add("when");
+        LOGICAL.add("else");
+        LOGICAL.add("end");
 
-		DML.add( "insert" );
-		DML.add( "update" );
-		DML.add( "delete" );
+        QUANTIFIERS.add("in");
+        QUANTIFIERS.add("all");
+        QUANTIFIERS.add("exists");
+        QUANTIFIERS.add("some");
+        QUANTIFIERS.add("any");
 
-		MISC.add( "select" );
-		MISC.add( "on" );
-	}
+        DML.add("insert");
+        DML.add("update");
+        DML.add("delete");
 
-	static final String indentString = "    ";
-	static final String initial = "\n    ";
+        MISC.add("select");
+        MISC.add("on");
+    }
 
-	public String format(String source) {
-		return new FormatProcess( source ).perform();
-	}
+    static final String indentString = "    ";
+    static final String initial = "\n    ";
 
-	private static class FormatProcess {
-		boolean beginLine = true;
-		boolean afterBeginBeforeEnd = false;
-		boolean afterByOrSetOrFromOrSelect = false;
-		boolean afterValues = false;
-		boolean afterOn = false;
-		boolean afterBetween = false;
-		boolean afterInsert = false;
-		int inFunction = 0;
-		int parensSinceSelect = 0;
-		private LinkedList parenCounts = new LinkedList();
-		private LinkedList afterByOrFromOrSelects = new LinkedList();
+    public String format(String source) {
+        return new FormatProcess(source).perform();
+    }
 
-		int indent = 1;
+    private static class FormatProcess {
+        boolean beginLine = true;
+        boolean afterBeginBeforeEnd = false;
+        boolean afterByOrSetOrFromOrSelect = false;
+        boolean afterValues = false;
+        boolean afterOn = false;
+        boolean afterBetween = false;
+        boolean afterInsert = false;
+        int inFunction = 0;
+        int parensSinceSelect = 0;
+        private LinkedList parenCounts = new LinkedList();
+        private LinkedList afterByOrFromOrSelects = new LinkedList();
 
-		StringBuffer result = new StringBuffer();
-		StringTokenizer tokens;
-		String lastToken;
-		String token;
-		String lcToken;
+        int indent = 1;
 
-		public FormatProcess(String sql) {
-			tokens = new StringTokenizer(
-					sql,
-					"()+*/-=<>'`\"[]," + WHITESPACE,
-					true
-			);
-		}
+        StringBuffer result = new StringBuffer();
+        StringTokenizer tokens;
+        String lastToken;
+        String token;
+        String lcToken;
 
-		public String perform() {
+        public FormatProcess(String sql) {
+            tokens = new StringTokenizer(
+                    sql,
+                    "()+*/-=<>'`\"[]," + WHITESPACE,
+                    true
+            );
+        }
 
-			result.append( initial );
+        public String perform() {
 
-			while ( tokens.hasMoreTokens() ) {
-				token = tokens.nextToken();
-				lcToken = token.toLowerCase();
+            result.append(initial);
 
-				if ( "'".equals( token ) ) {
-					String t;
-					do {
-						t = tokens.nextToken();
-						token += t;
-					}
-					while ( !"'".equals( t ) && tokens.hasMoreTokens() ); // cannot handle single quotes
-				}
-				else if ( "\"".equals( token ) ) {
-					String t;
-					do {
-						t = tokens.nextToken();
-						token += t;
-					}
-					while ( !"\"".equals( t ) );
-				}
+            while (tokens.hasMoreTokens()) {
+                token = tokens.nextToken();
+                lcToken = token.toLowerCase();
 
-				if ( afterByOrSetOrFromOrSelect && ",".equals( token ) ) {
-					commaAfterByOrFromOrSelect();
-				}
-				else if ( afterOn && ",".equals( token ) ) {
-					commaAfterOn();
-				}
+                if ("'".equals(token)) {
+                    String t;
+                    do {
+                        t = tokens.nextToken();
+                        token += t;
+                    }
+                    while (!"'".equals(t) && tokens.hasMoreTokens()); // cannot handle single quotes
+                } else if ("\"".equals(token)) {
+                    String t;
+                    do {
+                        t = tokens.nextToken();
+                        token += t;
+                    }
+                    while (!"\"".equals(t));
+                }
 
-				else if ( "(".equals( token ) ) {
-					openParen();
-				}
-				else if ( ")".equals( token ) ) {
-					closeParen();
-				}
+                if (afterByOrSetOrFromOrSelect && ",".equals(token)) {
+                    commaAfterByOrFromOrSelect();
+                } else if (afterOn && ",".equals(token)) {
+                    commaAfterOn();
+                } else if ("(".equals(token)) {
+                    openParen();
+                } else if (")".equals(token)) {
+                    closeParen();
+                } else if (BEGIN_CLAUSES.contains(lcToken)) {
+                    beginNewClause();
+                } else if (END_CLAUSES.contains(lcToken)) {
+                    endNewClause();
+                } else if ("select".equals(lcToken)) {
+                    select();
+                } else if (DML.contains(lcToken)) {
+                    updateOrInsertOrDelete();
+                } else if ("values".equals(lcToken)) {
+                    values();
+                } else if ("on".equals(lcToken)) {
+                    on();
+                } else if (afterBetween && lcToken.equals("and")) {
+                    misc();
+                    afterBetween = false;
+                } else if (LOGICAL.contains(lcToken)) {
+                    logical();
+                } else if (isWhitespace(token)) {
+                    white();
+                } else {
+                    misc();
+                }
 
-				else if ( BEGIN_CLAUSES.contains( lcToken ) ) {
-					beginNewClause();
-				}
+                if (!isWhitespace(token)) {
+                    lastToken = lcToken;
+                }
 
-				else if ( END_CLAUSES.contains( lcToken ) ) {
-					endNewClause();
-				}
+            }
+            return result.toString();
+        }
 
-				else if ( "select".equals( lcToken ) ) {
-					select();
-				}
+        private void commaAfterOn() {
+            out();
+            indent--;
+            newline();
+            afterOn = false;
+            afterByOrSetOrFromOrSelect = true;
+        }
 
-				else if ( DML.contains( lcToken ) ) {
-					updateOrInsertOrDelete();
-				}
-
-				else if ( "values".equals( lcToken ) ) {
-					values();
-				}
-
-				else if ( "on".equals( lcToken ) ) {
-					on();
-				}
-
-				else if ( afterBetween && lcToken.equals( "and" ) ) {
-					misc();
-					afterBetween = false;
-				}
-
-				else if ( LOGICAL.contains( lcToken ) ) {
-					logical();
-				}
-
-				else if ( isWhitespace( token ) ) {
-					white();
-				}
-
-				else {
-					misc();
-				}
-
-				if ( !isWhitespace( token ) ) {
-					lastToken = lcToken;
-				}
-
-			}
-			return result.toString();
-		}
-
-		private void commaAfterOn() {
-			out();
-			indent--;
-			newline();
-			afterOn = false;
-			afterByOrSetOrFromOrSelect = true;
-		}
-
-		private void commaAfterByOrFromOrSelect() {
-			out();
+        private void commaAfterByOrFromOrSelect() {
+            out();
 //			newline();
-		}
+        }
 
-		private void logical() {
-			if ( "end".equals( lcToken ) ) {
-				indent--;
-			}
-			newline();
-			out();
-			beginLine = false;
-		}
+        private void logical() {
+            if ("end".equals(lcToken)) {
+                indent--;
+            }
+            newline();
+            out();
+            beginLine = false;
+        }
 
-		private void on() {
-			indent++;
-			afterOn = true;
-			newline();
-			out();
-			beginLine = false;
-		}
+        private void on() {
+            indent++;
+            afterOn = true;
+            newline();
+            out();
+            beginLine = false;
+        }
 
-		private void misc() {
-			out();
-			if ( "between".equals( lcToken ) ) {
-				afterBetween = true;
-			}
-			if ( afterInsert ) {
-				newline();
-				afterInsert = false;
-			}
-			else {
-				beginLine = false;
-				if ( "case".equals( lcToken ) ) {
-					indent++;
-				}
-			}
-		}
+        private void misc() {
+            out();
+            if ("between".equals(lcToken)) {
+                afterBetween = true;
+            }
+            if (afterInsert) {
+                newline();
+                afterInsert = false;
+            } else {
+                beginLine = false;
+                if ("case".equals(lcToken)) {
+                    indent++;
+                }
+            }
+        }
 
-		private void white() {
-			if ( !beginLine ) {
-				result.append( " " );
-			}
-		}
+        private void white() {
+            if (!beginLine) {
+                result.append(" ");
+            }
+        }
 
-		private void updateOrInsertOrDelete() {
-			out();
-			indent++;
-			beginLine = false;
-			if ( "update".equals( lcToken ) ) {
-				newline();
-			}
-			if ( "insert".equals( lcToken ) ) {
-				afterInsert = true;
-			}
-		}
+        private void updateOrInsertOrDelete() {
+            out();
+            indent++;
+            beginLine = false;
+            if ("update".equals(lcToken)) {
+                newline();
+            }
+            if ("insert".equals(lcToken)) {
+                afterInsert = true;
+            }
+        }
 
-		private void select() {
-			out();
-			indent++;
-			newline();
-			parenCounts.addLast( new Integer( parensSinceSelect ) );
-			afterByOrFromOrSelects.addLast( Boolean.valueOf( afterByOrSetOrFromOrSelect ) );
-			parensSinceSelect = 0;
-			afterByOrSetOrFromOrSelect = true;
-		}
+        private void select() {
+            out();
+            indent++;
+            newline();
+            parenCounts.addLast(new Integer(parensSinceSelect));
+            afterByOrFromOrSelects.addLast(Boolean.valueOf(afterByOrSetOrFromOrSelect));
+            parensSinceSelect = 0;
+            afterByOrSetOrFromOrSelect = true;
+        }
 
-		private void out() {
-			result.append( token );
-		}
+        private void out() {
+            result.append(token);
+        }
 
-		private void endNewClause() {
-			if ( !afterBeginBeforeEnd ) {
-				indent--;
-				if ( afterOn ) {
-					indent--;
-					afterOn = false;
-				}
-				newline();
-			}
-			out();
-			if ( !"union".equals( lcToken ) ) {
-				indent++;
-			}
-			newline();
-			afterBeginBeforeEnd = false;
-			afterByOrSetOrFromOrSelect = "by".equals( lcToken )
-					|| "set".equals( lcToken )
-					|| "from".equals( lcToken );
-		}
+        private void endNewClause() {
+            if (!afterBeginBeforeEnd) {
+                indent--;
+                if (afterOn) {
+                    indent--;
+                    afterOn = false;
+                }
+                newline();
+            }
+            out();
+            if (!"union".equals(lcToken)) {
+                indent++;
+            }
+            newline();
+            afterBeginBeforeEnd = false;
+            afterByOrSetOrFromOrSelect = "by".equals(lcToken)
+                    || "set".equals(lcToken)
+                    || "from".equals(lcToken);
+        }
 
-		private void beginNewClause() {
-			if ( !afterBeginBeforeEnd ) {
-				if ( afterOn ) {
-					indent--;
-					afterOn = false;
-				}
-				indent--;
-				newline();
-			}
-			out();
-			beginLine = false;
-			afterBeginBeforeEnd = true;
-		}
+        private void beginNewClause() {
+            if (!afterBeginBeforeEnd) {
+                if (afterOn) {
+                    indent--;
+                    afterOn = false;
+                }
+                indent--;
+                newline();
+            }
+            out();
+            beginLine = false;
+            afterBeginBeforeEnd = true;
+        }
 
-		private void values() {
-			indent--;
-			newline();
-			out();
-			indent++;
-			newline();
-			afterValues = true;
-		}
+        private void values() {
+            indent--;
+            newline();
+            out();
+            indent++;
+            newline();
+            afterValues = true;
+        }
 
-		private void closeParen() {
-			parensSinceSelect--;
-			if ( parensSinceSelect < 0 ) {
-				indent--;
-				parensSinceSelect = ( ( Integer ) parenCounts.removeLast() ).intValue();
-				afterByOrSetOrFromOrSelect = ( ( Boolean ) afterByOrFromOrSelects.removeLast() ).booleanValue();
-			}
-			if ( inFunction > 0 ) {
-				inFunction--;
-				out();
-			}
-			else {
-				if ( !afterByOrSetOrFromOrSelect ) {
-					indent--;
-					newline();
-				}
-				out();
-			}
-			beginLine = false;
-		}
+        private void closeParen() {
+            parensSinceSelect--;
+            if (parensSinceSelect < 0) {
+                indent--;
+                parensSinceSelect = ((Integer) parenCounts.removeLast()).intValue();
+                afterByOrSetOrFromOrSelect = ((Boolean) afterByOrFromOrSelects.removeLast()).booleanValue();
+            }
+            if (inFunction > 0) {
+                inFunction--;
+                out();
+            } else {
+                if (!afterByOrSetOrFromOrSelect) {
+                    indent--;
+                    newline();
+                }
+                out();
+            }
+            beginLine = false;
+        }
 
-		private void openParen() {
-			if ( isFunctionName( lastToken ) || inFunction > 0 ) {
-				inFunction++;
-			}
-			beginLine = false;
-			if ( inFunction > 0 ) {
-				out();
-			}
-			else {
-				out();
-				if ( !afterByOrSetOrFromOrSelect ) {
-					indent++;
-					newline();
-					beginLine = true;
-				}
-			}
-			parensSinceSelect++;
-		}
+        private void openParen() {
+            if (isFunctionName(lastToken) || inFunction > 0) {
+                inFunction++;
+            }
+            beginLine = false;
+            if (inFunction > 0) {
+                out();
+            } else {
+                out();
+                if (!afterByOrSetOrFromOrSelect) {
+                    indent++;
+                    newline();
+                    beginLine = true;
+                }
+            }
+            parensSinceSelect++;
+        }
 
-		private static boolean isFunctionName(String tok) {
-			final char begin = tok.charAt( 0 );
-			final boolean isIdentifier = Character.isJavaIdentifierStart( begin ) || '"' == begin;
-			return isIdentifier &&
-					!LOGICAL.contains( tok ) &&
-					!END_CLAUSES.contains( tok ) &&
-					!QUANTIFIERS.contains( tok ) &&
-					!DML.contains( tok ) &&
-					!MISC.contains( tok );
-		}
+        private static boolean isFunctionName(String tok) {
+            final char begin = tok.charAt(0);
+            final boolean isIdentifier = Character.isJavaIdentifierStart(begin) || '"' == begin;
+            return isIdentifier &&
+                    !LOGICAL.contains(tok) &&
+                    !END_CLAUSES.contains(tok) &&
+                    !QUANTIFIERS.contains(tok) &&
+                    !DML.contains(tok) &&
+                    !MISC.contains(tok);
+        }
 
-		private static boolean isWhitespace(String token) {
-			return WHITESPACE.indexOf( token ) >= 0;
-		}
+        private static boolean isWhitespace(String token) {
+            return WHITESPACE.indexOf(token) >= 0;
+        }
 
-		private void newline() {
-			result.append( "\n" );
-			for ( int i = 0; i < indent; i++ ) {
-				result.append( indentString );
-			}
-			beginLine = true;
-		}
-	}
+        private void newline() {
+            result.append("\n");
+            for (int i = 0; i < indent; i++) {
+                result.append(indentString);
+            }
+            beginLine = true;
+        }
+    }
 
 }
